<resources>
    <string name="app_name">CuriosityScreenAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_with_facebook"><font size="17">Sign In With <b>Facebook</b></font></string>
    <string name="sign_in_with_google"><font size="17">Sign In With <b>Google</b></font></string>
    <string name="sign_in_with_twitter"><font size="17">Sign In With <b>Twitter</b></font></string>
    <string name="sign_up_email"><font size="17"><b>Sign Up</b></font>\ \n <small>With Email</small></string>
    <string name="sign_in_email"><font size="17"><b>Sign In</b></font>\ \n <small>With Email</small></string>
    <string name="term_and_conditions">Terms &amp; Conditoins and Privacy Policy</string>
</resources>
