<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.einandartun.curiosityscreenassignment.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    
    <LinearLayout
        android:id="@+id/ll_curiosity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curiosity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/facebook_icon"
            android:text="@string/sign_in_with_facebook"
            android:background="@color/colorFacebook"
            android:textAllCaps="false"
            android:textColor="@color/white_full"
            android:textAlignment="textStart"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
        </Button>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/google_icon"
            android:text="@string/sign_in_with_google"
            android:background="@color/colorGoogle"
            android:textAllCaps="false"
            android:textColor="@color/white_full"
            android:textAlignment="textStart"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/twitter_icon"
            android:text="@string/sign_in_with_twitter"
            android:background="@color/colorTwitter"
            android:textAllCaps="false"
            android:textColor="@color/white_full"
            android:textAlignment="textStart"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp">
        </Button>

            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/mail"
                    android:text="@string/sign_up_email"
                    android:background="@color/colorEmail"
                    android:textAllCaps="false"
                    android:textColor="@color/white_full"
                    android:textAlignment="textStart"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">
                </Button>
                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/mail"
                    android:text="@string/sign_in_email"
                    android:background="@color/colorEmail"
                    android:textAllCaps="false"
                    android:textColor="@color/white_full"
                    android:textAlignment="textStart"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">
                </Button>



            </LinearLayout>


        <TextView
            android:id="@+id/tv_term_and_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term_and_conditions"
            android:textColor="@color/terms_and_condition"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:gravity="center" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
